@@ -65,6 +65,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
 import|;
 end_import
@@ -86,16 +96,6 @@ operator|.
 name|util
 operator|.
 name|SortedMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|TreeSet
 import|;
 end_import
 
@@ -796,7 +796,7 @@ argument_list|>
 name|excludedRegions
 init|=
 operator|new
-name|TreeSet
+name|HashSet
 argument_list|<
 name|HRegion
 argument_list|>
